syntax = "proto3";
package inference.inference;

option go_package = "github.com/productscience/inference/x/inference/types";

enum BridgeTransactionStatus {
  BRIDGE_PENDING = 0;
  BRIDGE_COMPLETED = 1;
}

message BridgeTransaction {
  string id = 1;                  
  string originChain = 2;            
  string contractAddress = 3;        
  string ownerAddress = 4;           
  string amount = 5;                 
  string recipient = 6;              
  int64 blockHeight = 7;            
  int64 timestamp = 8;              
  BridgeTransactionStatus status = 9;
  repeated string validators = 10;    
  uint32 validationCount = 11;       
  string blockNumber = 12;          // block number where the transaction occurred on the origin chain
  string receiptIndex = 13;         // index of the transaction receipt in the block
  string receiptsRoot = 14;         // merkle root of receipts trie for transaction verification
} 